--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -99,7 +99,7 @@ Notably, our model also demonstrates greater robustness to duration prediction e
 Furthermore, we discover that the text guidance scale can also be used to modulate the intensity of personal accents, offering a new direction for enhancing speech expressiveness.
 
 - We successfully reduce the inference steps from 25 to 8 with the piecewise rectified flow (PeRFLow) technique, achieving highly efficient zero-shot TTS with minimal quality degradation.
-We also visualize the attention matrices across various layers of ***MegaTTS3*** and obtain insightful findings in Appendix~\ref{app:vis_diff_attn}.
+We also visualize the attention matrices across various layers of ***MegaTTS3*** and obtain insightful findings in Appendix F.
 
 </td><td>
 
@@ -267,6 +267,8 @@ In this subsection, we describe the sparse alignment strategy as the foundation 
 
 </td><td>
 
+在本小节中, 我们描述了稀疏对齐策略作为 ***MegaTTS3*** 的基础, 随后介绍分段 Rectified Flow 和多条件 CFG 策略, 以进一步增强 ***MegaTTS3*** 的能力.
+
 </td></tr>
 <tr><td>
 
@@ -276,7 +278,7 @@ Let’s first analyze the reasons behind the characteristics of different speech
 Implicitly modeling speech-text alignment is a relatively challenging task, which consequently leads to suboptimal speech intelligibility, particularly in hard cases.
 On the other hand, employing predefined hard alignment paths constrains the model's search space to produce more natural-sounding speech.
 The characteristics of these systems motivate us to design an approach that combines the advantages of both: we first provide a rough alignment to ***MegaTTS3*** and then use attention mechanisms in Transformer blocks to construct the fine-grained implicit alignment path.
-The visualizations of the implicit alignment paths are included in Appendix~\ref{app:vis_diff_attn}.
+The visualizations of the implicit alignment paths are included in [Appendix F](#Appendix_F).
 In specific, denote the latent speech vector sequence as $z=[z_1, z_2, \cdots, z_n]$, the phoneme sequence as $p=[p_1, p_2, \cdots, p_m]$, and the phoneme duration sequence as $d=[d_1, d_2, \cdots, d_m]$, where $n$, $m$ is the length of the sequence.
 The length of the speech vector that corresponds to a phoneme $p_i$ is the duration $d_i$.
 Given $d=[2, 2, 3]$, the hard speech-text alignment path can be denoted as $a=[p_1, p_1, p_2, p_2, p_3, p_3, p_3]$.
@@ -285,6 +287,28 @@ $\tilde{a}$ is downsampled with convolution layers to match the length of the la
 Then, we directly concatenate the downsampled $\tilde{a}$ and $z$ along the channel dimension.
 The anchors in $\tilde{a}$ provide ***MegaTTS3*** with approximate positional information for each phoneme, simplifying the learning process of speech-text alignment.
 At the same time, the rough alignment information does not limit ***MegaTTS3***'s search space and also enables fine-grained control over each phoneme's duration.
+
+</td><td>
+
+**稀疏对齐策略**
+
+首先我们深入分析不同语音-文本对齐建模方法特性背后的原因.
+
+隐式建模语音-文本对齐是相当具有挑战性的任务, 这导致次优的语音理解能力, 尤其是在困难情形下.
+另一方面, 采用预定义的硬对齐路径限制了模型的搜索空间, 难以产生更自然的语音.
+
+这些系统的特性启发我们设计一个方法来结合它们的优势:
+我们首先给 ***MegaTTS3*** 提供粗略的对齐, 然后使用 Transformer 块中的注意力机制来构造细粒度的隐式对齐路径.
+隐式对齐路径的可视化可在[附录 F](#Appendix_F) 中找到.
+具体来说, 记潜在语音向量序列为 $z=[z_1, z_2, \cdots, z_n]$, 音素序列为 $p=[p_1, p_2, \cdots, p_m]$, 音素持续时间序列为 $d=[d_1, d_2, \cdots, d_m]$, 其中 $n$, $m$ 为序列长度.
+对应音素 $p_i$ 的语音向量的长度为持续时间 $d_i$.
+
+给定 $d=[2,2,3]$, 硬语音文本对齐路径可以表示为 $a=[p_1, p_1, p_2, p_2, p_3, p_3, p_3]$.
+为了构造粗略对齐 $\tilde{a}$, 我们随机保留每个音素的一个锚点: $\tilde{a} = [\underline{M}, p_1, p_2, \underline{M}, \underline{M}, \underline{M}, P_3]$, 其中 $\underline{M}$ 表示掩码标记.
+$\tilde{a}$ 被卷积层下采样以与潜在序列 $z$ 长度匹配.
+然后, 我们直接将下采样的 $\tilde{a}$ 和 $z$ 按通道维度连接.
+$\tilde{a}$ 中的锚点提供了 ***MegaTTS3*** 关于每个音素的近似位置信息, 简化了语音-文本对齐的学习过程.
+同时, 粗略对齐信息并不限制 ***MegaTTS3*** 的搜索空间, 还能对每个音素的持续时间进行细粒度控制.
 
 </td><td>
 
@@ -307,16 +331,37 @@ $$
 $$
 
 where $v_{\hat{\theta}}$ is the estimated drift force with parameter $\hat{\theta}$ and $t$ is uniformly sampled from $(t_{k-1},t_{k}]$.
-We provide details of PeRFlow training for ***MegaTTS3*** in Appendix~\ref{app:details_perflow_training}.
+We provide details of PeRFlow training for ***MegaTTS3*** in [Appendix C](#Appendix_C).
 
 </td><td>
+
+**分段 Rectified Flow 加速**
+
+我们采用 **分段 Rectified Flow (PeRFlow)**[^53] 来蒸馏预训练的 ***MegaTTS3*** 模型, 转化为更高效的生成器.
+尽管我们的 ***MegaTTS3*** 在时间维度上是非自回归的, 但需要多次迭代才能求解 Flow ODE.
+迭代次数 (即函数评估次数, NFE) 对推理效率有着巨大的影响, 尤其是在模型规模扩大时.
+因此, 我们采用 PeRFlow 技术进一步减少 NFE, 通过将流轨迹分段为多个时间窗口来实现.
+在这些缩短的时间间隔内应用 ReFlow 操作, PeRFlow 消除了对训练数据准备的完整 ODE 轨迹的模拟的需要, 允许它在训练过程中与大规模真实数据实时训练.
+
+给定窗口数 $K$, 我们将时间 $t\in[0,1]$ 分为 $K$ 个时间窗口 $\{ (t_{k-1}, t_{k}] \}^{K}_{k=1}$.
+然后, 我们随机采样 $k\in\{1,\cdots,K\}$ 均匀分布.
+我们使用采样时间窗口的起点 $z_{t_{k-1}} = \sqrt{1 - \sigma^2(t_{k-1})} z_1 + \sigma(t_{k-1}) \epsilon$ 来求解时间窗口的终点 $\hat{z}_{t_k} = \phi_{\theta}(z_{t_{k-1}}, t_{k-1}, t_{k})$, 其中 $\epsilon \sim \mathcal{N}(0, I) $ 是随机噪声, $\sigma(t)$ 是噪声调度, $\phi_{\theta}$ 是教师模型的 ODE 求解器.
+因为 $z_{t_{k-1}}$ 和 $\hat{z}_{t_{k}}$ 都是可用的, 学生模型 $\hat{\theta}$ 可以通过以下目标训练:
+$$
+\ell = \left\lVert v_{\hat{\theta}}(z_t, t) - \frac{\hat{z}_{t_k} - z_{t_{k-1}}}{t_k - t_{k-1}} \right\lVert^2,
+$$
+
+- $v_{\hat{\theta}}$ 是估计漂移力的函数, 参数为 $\hat{\theta}$,
+- $t$ 是均匀分布在 $(t_{k-1},t_{k}]$ 上的采样时间.
+
+我们在[附录 C](#Appendix_C) 中提供了 PeRFlow 训练 ***MegaTTS3*** 的详细细节.
 
 </td></tr>
 <tr><td>
 
-**Multi-condition Classifier-Free Guidance (CFG)**
+**Multi-Condition Classifier-Free Guidance (CFG)**
 
-We employ classifier-free guidance approach[^54] to steer the model $g_{\theta}$'s output towards the conditional generation $g_{\theta}(z_t,c)$ and away from the unconditional generation $g_{\theta}(z_t,\varnothing)$:
+We employ **classifier-free guidance approach**[^54] to steer the model $g_{\theta}$'s output towards the conditional generation $g_{\theta}(z_t,c)$ and away from the unconditional generation $g_{\theta}(z_t,\varnothing)$:
 $$
 \hat{g}_{\theta}(z_t, c) = g_{\theta}(z_t, \varnothing) + \alpha \cdot \left[ g_{\theta}(z_t, c) - g_{\theta}(z_t, \varnothing) \right],
 $$
@@ -324,7 +369,7 @@ $$
 where $c$ denotes the conditional state, $\varnothing$ denotes the unconditional state, and $\alpha$ is the guidance scale selected based on experimental results.
 Unlike standard classifier-free guidance, ***MegaTTS3***'s conditional states $c$ consist of two components: phoneme embeddings $p$ and the speaker prompt $z_{prompt}$.
 In the experiments, as the text guidance scale increases, we observe that the pronunciation changes according to the following pattern: 1) starting with improper pronunciation; 2) then shifting to pronouncing with the current speaker's accent; 3) and finally approaching the standard pronunciation of the target language.
-The detailed experimental setup is described in Appendix~\ref{app:additional_detials_for_mt_cfg}.
+The detailed experimental setup is described in [Appendix K](#Appendix_K).
 This allows us to use the text guidance scale $\alpha_{txt}$ to control the accent intensity.
 At the same time, the speaker guidance scale $\alpha_{spk}$ should be a relatively high value to ensure a high speaker similarity.
 Therefore, we adopt the multi-condition classifier-free guidance technique to separately control $\alpha_{txt}$ and $\alpha_{spk}$:
@@ -342,6 +387,44 @@ Therefore, our model is able to handle all three types of conditional inputs des
 We select the guidance scale $\alpha_{spk}$ and $\alpha_{txt}$ based on experimental results.
 
 </td><td>
+
+**多条件无分类器引导 (CFG)**
+
+我们采用**无分类器引导方法**[^54] 来引导模型 $g_{\theta}$ 的输出指向条件生成 $g_{\theta}(z_t,c)$, 远离无条件生成 $g_{\theta}(z_t,\varnothing)$:
+$$
+\hat{g}_{\theta}(z_t, c) = g_{\theta}(z_t, \varnothing) + \alpha \cdot \left[ g_{\theta}(z_t, c) - g_{\theta}(z_t, \varnothing) \right],
+$$
+
+- $c$ 表示条件状态,
+- $\varnothing$ 表示无条件状态,
+- $\alpha$ 是基于实验结果选择的引导尺度.
+
+和标准的无分类器引导不同, ***MegaTTS3*** 的条件状态 $c$ 由音素嵌入 $p$ 和说话人提示 $z_{prompt}$ 组成.
+
+在实验中, 随着文本引导尺度增加, 我们观察到发音变换遵循如下模式:
+1. 从不正确的发音开始;
+2. 然后转移到当前说话人的口音的发音;
+3. 最后接近目标语言的标准发音.
+
+实验细节请参见[附录 K](#Appendix_K).
+
+这允许我们使用文本引导尺度 $\alpha_{txt}$ 来控制口音强度.
+
+同时, 说话人引导尺度 $\alpha_{spk}$ 应该是相对较高的值, 以确保说话人相似度高.
+
+因此, 我们采用多条件无分类器引导技术来分别控制 $\alpha_{txt}$ 和 $\alpha_{spk}$:
+
+$$
+\begin{split}
+\hat{g}_{\theta}(z_t, p, z_{prompt}) = & \alpha_{spk} \left[ g_{\theta}(z_t, p, z_{prompt}) - g_{\theta}(z_t, p, \varnothing) \right] \\
+& + \alpha_{txt} \left[ g_{\theta}(z_t, p, \varnothing) - g_{\theta}(z_t, \varnothing, \varnothing) \right] \\
+& + g_{\theta}(z_t, \varnothing, \varnothing) \\
+\end{split}
+$$
+
+在训练中, 我们按概率 $p_{spk}=0.10$ 随机丢弃说话人提示 $z_{prompt}$.
+只有当 $z_{prompt}$ 被丢弃时, 我们才按概率 50\% 随机丢弃条件 $p$.
+因此, 我们的模型能够处理由上式描述的三种条件输入.
 
 </td></tr></table>
 
@@ -535,7 +618,7 @@ However, compared to forced alignment, sparse alignment does not constrain the m
 Therefore, the sparse alignment strategy achieves $+0.17$ CMOS compared to the forced alignment strategy.
 For setting (3), compared with the standard CFG, our multi-condition CFG performs slightly better as it allows for flexible control over the weights between the text prompt and the speaker prompt.
 Setting (4) proves that the CFG mechanism is crucial for ***MegaTTS3***.
-Additionally, we visualize the attention score matrices from different transformer layers in ***MegaTTS3*** in Appendix~\ref{app:vis_diff_attn}, leading to some interesting observations.
+Additionally, we visualize the attention score matrices from different transformer layers in ***MegaTTS3*** in Appendix F, leading to some interesting observations.
 
 </td><td>
 
