--- a/Models/SpeechLM/PureSpeechLM/2021.02.01_GSLM.md
+++ b/Models/SpeechLM/PureSpeechLM/2021.02.01_GSLM.md
@@ -22,8 +22,8 @@
   - [Github](https://github.com/pytorch/fairseq/tree/master/examples/textless_nlp/gslm)
   - [Demo]
 - 文件:
-  - [ArXiv](_PDF/2102.01192v2__GSLM__On_Generative_Spoken_Language_Modeling_from_Raw_Audio.pdf)
-  - [Publication](_PDF/2102.01192p0__GSLM__TACL2021.pdf)
+  - [ArXiv](../_PDF/2102.01192v2__GSLM__On_Generative_Spoken_Language_Modeling_from_Raw_Audio.pdf)
+  - [Publication](../_PDF/2102.01192p0__GSLM__TACL2021.pdf)
 
 </details>
 
