--- a/Models/SpeechLM/PureSpeechLM/2021.09.07_pGSLM.md
+++ b/Models/SpeechLM/PureSpeechLM/2021.09.07_pGSLM.md
@@ -22,8 +22,8 @@
   - [Github](https://github.com/pytorch/fairseq/tree/main/examples/textless_nlp/pgslm)
   - [Demo](https://speechbot.github.io/pgslm)
 - 文件:
-  - [ArXiv](_PDF/2109.03264v2__pGSLM__Text-Free_Prosody-Aware_Generative_Spoken_Language_Modeling.pdf)
-  - [Publication](_PDF/2109.03264p0__pGSLM__ACL2022.pdf)
+  - [ArXiv](../_PDF/2109.03264v2__pGSLM__Text-Free_Prosody-Aware_Generative_Spoken_Language_Modeling.pdf)
+  - [Publication](../_PDF/2109.03264p0__pGSLM__ACL2022.pdf)
 
 </details>
 
