--- a/Surveys/S20240220.md
+++ b/Surveys/S20240220.md
@@ -18,7 +18,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](2024.02.20__2402.13236v1__Survey__Towards_Audio_Language_Modeling__An_Overview.pdf)
+  - [ArXiv](PDF/2024.02.20__2402.13236v1__Survey__Towards_Audio_Language_Modeling__An_Overview.pdf)
   - [Publication] #TODO
 
 </details>
@@ -60,7 +60,7 @@ The receiver then uses the codec decoder to reconstruct the audio using the rece
 
 Language modeling has proven to be highly successful in the field of Natural Language Processing (NLP).
 Audio data encompasses not only textual content but also rich information about speaker timbre, emotion, and general audio, offering deeper possibilities for language model applications.
-Researchers, especially those in large companies with significant computational resources, recently leverage the potential of neural codecs ([Encodec (2022)](../Models/SpeechCodec/2022.10.24_EnCodec.md), [SoundStream (2021)](../Models/SpeechCodec/2021.07.07_SoundStream.md), [SoundStorm (2023)](../Models/SpeechLM/2023.05.16_SoundStorm.md), [AudioDec (2023)](../Models/SpeechCodec/2023.05.26_AudioDec.md), [AcademiCodec/HiFi-Codec (2023)](../Models/SpeechCodec/2023.05.04_HiFi-Codec.md), [FunCodec (2023)](../Models/SpeechCodec/2023.09.14_FunCodec.md), [SpeechTokenizer (2023)](../Models/SpeechCodec/2023.08.31_SpeechTokenizer.md), [Descript-Audio-Codec (2023)](../Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md)) as suitable tokenizers for converting continuous audio into discrete codes, which can be employed to develop audio language models (LMs) ([AudioLM (2022)](../Models/SpeechLM/2022.09.07_AudioLM.md), [AudioPaLM (2023)](../Models/SpeechLM/2023.06.22_AudioPaLM.md), [MusicLM (2023)](../Models/SpeechLM/2023.01.26_MusicLM.md), [VALL-E (2023)](../Models/SpeechLM/2023.01.05_VALL-E.md), [VALL-E X (2023)](../Models/SpeechLM/2023.03.07_VALL-E_X.md), [VioLA (2023)](../Models/SpeechLM/2023.05.25_VioLA.md), [UniAudio (2023)](../Models/SpeechLM/2023.10.01_UniAudio.md), [LauraGPT (2023)](../Models/SpeechLM/2023.10.07_LauraGPT.md), [SpeechX (2023)](../Models/SpeechLM/2023.08.14_SpeechX.md), [MusicGen (2023)](../Models/SpeechLM/2023.06.08_MusicGen.md), [AudioGen (2022)](../Models/SpeechLM/2022.09.30_AudioGen.md)).
+Researchers, especially those in large companies with significant computational resources, recently leverage the potential of neural codecs ([Encodec (2022)](../Models/SpeechCodec/2022.10.24_EnCodec.md), [SoundStream (2021)](../Models/SpeechCodec/2021.07.07_SoundStream.md), [SoundStorm (2023)](../Models/SpeechLM/ST2S/2023.05.16_SoundStorm.mdrm.md), [AudioDec (2023)](../Models/SpeechCodec/2023.05.26_AudioDec.md), [AcademiCodec/HiFi-Codec (2023)](../Models/SpeechCodec/2023.05.04_HiFi-Codec.md), [FunCodec (2023)](../Models/SpeechCodec/2023.09.14_FunCodec.md), [SpeechTokenizer (2023)](../Models/SpeechCodec/2023.08.31_SpeechTokenizer.md), [Descript-Audio-Codec (2023)](../Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md)) as suitable tokenizers for converting continuous audio into discrete codes, which can be employed to develop audio language models (LMs) ([AudioLM (2022)](../Models/SpeechLM/2022.09.07_AudioLM.md), [AudioPaLM (2023)](../Models/SpeechLM/2023.06.22_AudioPaLM.md), [MusicLM (2023)](../Models/SpeechLM/2023.01.26_MusicLM.md), [VALL-E (2023)](../Models/SpeechLM/2023.01.05_VALL-E.md), [VALL-E X (2023)](../Models/SpeechLM/2023.03.07_VALL-E_X.md), [VioLA (2023)](../Models/SpeechLM/2023.05.25_VioLA.md), [UniAudio (2023)](../Models/SpeechLM/2023.10.01_UniAudio.md), [LauraGPT (2023)](../Models/SpeechLM/2023.10.07_LauraGPT.md), [SpeechX (2023)](../Models/SpeechLM/2023.08.14_SpeechX.md), [MusicGen (2023)](../Models/SpeechLM/2023.06.08_MusicGen.md), [AudioGen (2022)](../Models/SpeechLM/2022.09.30_AudioGen.md)).
 The current codec-based language models and codec models are summarized in [Fig.01](#Fig.01).
 These findings promptly garnered the community’s attention, sparking a fervor for developing codecs tailored to audio language modeling.
 Numerous high performance neural audio codec models and audio LMs have been developed.
@@ -162,7 +162,7 @@ $n_c$ represents the codebook number, `SR` represents the Sample Rate, and `BPS`
 It utilizes the streaming [SEANets (2020)](../Models/_Basis/2020.09.04_SEANet.md) as its encoder and decoder.
 The quantizer incorporates a speech enhancement system with a **Residual Vector Quantization (RVQ)** ([SoundStream (2021)](../Models/SpeechCodec/2021.07.07_SoundStream.md), [MelGAN (2019)](../Models/Vocoder/2019.10.08_MelGAN.md)) bottleneck to obtain parallel token streams.
 During training, the model parameters are optimized using a combination of reconstruction and adversarial loss.
-[SoundStorm (2023)](../Models/SpeechLM/2023.05.16_SoundStorm.md) is an improved version of [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) to achieve both efficiency and high-quality audio generation.
+[SoundStorm (2023)](../Models/SpeechLM/ST2S/2023.05.16_SoundStorm.mdrm.md) is an improved version of [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) to achieve both efficiency and high-quality audio generation.
 It accomplishes this by employing an architecture specifically tailored to the hierarchical structure of audio tokens.
 Moreover, it pioneers a parallel, non-autoregressive decoding scheme, which relies on confidence-based strategies for residual vector-quantized token sequences.
 
@@ -174,7 +174,7 @@ Moreover, it pioneers a parallel, non-autoregressive decoding scheme, which reli
 在训练时, 模型参数使用重构损失和对抗损失的结合进行优化.
 
 #TODO ?
-[SoundStorm (2023)](../Models/SpeechLM/2023.05.16_SoundStorm.md) 是 [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) 的改进版本, 实现了高效和高质量音频生成.
+[SoundStorm (2023)](../Models/SpeechLM/ST2S/2023.05.16_SoundStorm.mdrm.md) 是 [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) 的改进版本, 实现了高效和高质量音频生成.
 该模型通过采用专门针对音频 Token 的层次结构的架构来实现这一点.
 此外, 它首创了一种并行的, 非自回归的解码方案, 该方案依赖于基于置信度的策略来处理残差向量量化后的 Token 序列.
 
@@ -433,7 +433,7 @@ What sets [VioLA (2023)](../Models/SpeechLM/2023.05.25_VioLA.md), [AudioPaLM (20
 It is a decoder-only, autoregressive model capable of processing and generating both text and speech.
 Additionally, [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md)’s initialization stems from [PaLM-2 (2023)](../Models/TextLM/2023.05.17_PaLM2.md), a text-only language model.
 [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md)’s approach to audio tokenization resembles that of [AudioLM](../Models/SpeechLM/2022.09.07_AudioLM.md).
-Moreover, [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md) adopts and extends the [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) model to [SoundStorm (2023)](../Models/SpeechLM/2023.05.16_SoundStorm.md).
+Moreover, [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md) adopts and extends the [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) model to [SoundStorm (2023)](../Models/SpeechLM/ST2S/2023.05.16_SoundStorm.mdrm.md).
 [LauraGPT (2023)](../Models/SpeechLM/2023.10.07_LauraGPT.md) is a versatile language model built on a decoder-only text-based language model, [Qwen-2B (2023)](../Models/TextLM/2023.09.28_Qwen.md).
 [LauraGPT](../Models/SpeechLM/2023.10.07_LauraGPT.md) has the capability to process both audio and text inputs, generating outputs in either modality.
 [LauraGPT](../Models/SpeechLM/2023.10.07_LauraGPT.md) encodes input audio into continuous representations using a [Conformer](../Models/ASR/2020.05.16_Conformer.md) encoder and decodes output audio using [FunCodec](../Models/SpeechCodec/2023.09.14_FunCodec.md) discrete codes.
@@ -443,7 +443,7 @@ The authors claim this specific audio features design for inputs and outputs wil
 
 [VioLA](../Models/SpeechLM/2023.05.25_VioLA.md), [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md), 和 [LauraGPT](../Models/SpeechLM/2023.10.07_LauraGPT.md) 的不同指出在于它们具有生成文本和音频的双重能力.
 - [VioLA](../Models/SpeechLM/2023.05.25_VioLA.md) 试图解决 "是否只需要一个仅用解码器的生成模型就能完成语音识别, 合成和翻译?" 的问题, 通过采用结合 文本 Token 和音频 Token (由 [Encodec](../Models/SpeechCodec/2022.10.24_EnCodec.md) 提取), 任务 ID 和语言 ID 进行语言建模.
-- [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md) 构造了一个统一的词汇表, 包括文本和音频 Token. 它是一个仅使用解码器, 自回归模型, 能够处理和生成文本和语音. 此外, 其初始化来自一个仅文本的语言模型 [PaLM-2 (2023)](../Models/TextLM/2023.05.17_PaLM2.md). 其音频分词方式与 [AudioLM](../Models/SpeechLM/2022.09.07_AudioLM.md) 类似. 此外, 还采用并扩展了 [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) 到 [SoundStorm](../Models/SpeechLM/2023.05.16_SoundStorm.md).
+- [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md) 构造了一个统一的词汇表, 包括文本和音频 Token. 它是一个仅使用解码器, 自回归模型, 能够处理和生成文本和语音. 此外, 其初始化来自一个仅文本的语言模型 [PaLM-2 (2023)](../Models/TextLM/2023.05.17_PaLM2.md). 其音频分词方式与 [AudioLM](../Models/SpeechLM/2022.09.07_AudioLM.md) 类似. 此外, 还采用并扩展了 [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md) 到 [SoundStorm](../Models/SpeechLM/ST2S/2023.05.16_SoundStorm.mdrm.md).
 - [LauraGPT](../Models/SpeechLM/2023.10.07_LauraGPT.md) 是建立在仅使用解码器的基于文本的语言模型 [Qwen-2B (2023)](../Models/TextLM/2023.09.28_Qwen.md) 的多功能语言模型, 它具有处理音频和文本输入的能力, 生成的双模态输出. 它采用 [Conformer](../Models/ASR/2020.05.16_Conformer.md) 编码器编码输入音频, 并使用 [FunCodec](../Models/SpeechCodec/2023.09.14_FunCodec.md) 离散编码解码为输出音频. 作者声称特定的音频特征设计, 对于输入和输出, 将会提升语音生成的性能, 并给出了一些初步的实验结果.
 
 </td></tr>
@@ -468,7 +468,7 @@ Additionally, there are other codec-based language models designed for sound mod
 It approaches the task of conditional music generation through a hierarchical sequence-to-sequence modeling approach.
 Initially, it utilizes music tokens from [Mulan](../Models/_Basis/2022.08.26_MuLan.md)  to generate semantic tokens from the [W2V-BERT](../Models/SpeechRepresentation/2021.08.07_W2V-BERT.md) model.
 Subsequently, it employs both music tokens and semantic tokens to generate acoustic features through [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md).
-[MusicGen (2023)](../Models/SpeechLM/2023.06.08_MusicGen.md) is a music language model designed to work with [EnCodec](../Models/SpeechCodec/2022.10.24_EnCodec.md) discrete tokens.
+[MusicGen (2023)](../Models/Music/2023.06.08_MusicGen.mds a music language model designed to work with [EnCodec](../Models/SpeechCodec/2022.10.24_EnCodec.md) discrete tokens.
 It accepts textual descriptions or melodic features as input conditions to generate tokens, which can be reconstructed to high-fidelity music.
 
 </td><td>
@@ -479,7 +479,7 @@ It accepts textual descriptions or melodic features as input conditions to gener
   它采用层次序列到序列的建模方式来解决指导式音乐生成问题.
   最初, 它利用 [Mulan](../Models/_Basis/2022.08.26_MuLan.md) 中的音乐 Token 来生成语义 Token, 并利用 [W2V-BERT](../Models/SpeechRepresentation/2021.08.07_W2V-BERT.md) 模型来生成音频特征.
   随后, 它采用音乐 Token 和语义 Token 来生成声学特征, 并使用 [SoundStream](../Models/SpeechCodec/2021.07.07_SoundStream.md).
-- [MusicGen (2023)](../Models/SpeechLM/2023.06.08_MusicGen.md) 是为 [EnCodec](../Models/SpeechCodec/2022.10.24_EnCodec.md) 离散 Token 设计的音乐语言模型.
+- [MusicGen (2023)](../Models/Music/2023.06.08_MusicGen.md为 [EnCodec](../Models/SpeechCodec/2022.10.24_EnCodec.md) 离散 Token 设计的音乐语言模型.
   它接受文本描述或旋律特征作为输入条件, 生成 Token, 这些 Token 可以用于高保真的音乐生成.
 
 </td></tr>
@@ -491,7 +491,7 @@ This research direction focuses on modeling the semantics of speech, with the op
 Pioneering work is speech-resynthesis [38], which utilizes these discrete units in conjunction with prosody and speaker encoders to encode speech into low-bitrate codes.
 These codes can then be resynthesized into a speech signal with a decoder to achieve low-bitrate transmission.
 Additionally, these discrete units can be regarded as “pseudo-text,” serving as a foundation for training textless speech language models.
-Notable examples include [GSLM (2021)](../Models/SpeechLM/2021.02.01_GSLM.md), [pGSLM (2021)](../Models/SpeechLM/2021.09.07_pGSLM.md), [dGSLM (2022)](../Models/SpokenDialogue/2022.03.30_dGSLM.md) and [TWIST (2023)](../Models/SpeechLM/2023.05.22_TWIST.md).
+Notable examples include [GSLM (2021)](../Models/SpeechLM/S2S/2021.02.01_GSLM.m[pGSLM (2021)](../Models/SpeechLM/S2S/2021.09.07_pGSLM.md).md), [dGSLM (2022)](../Models/SpokenDialogue/2022.03.30_dGSLM.md) and [TWIST (2023)](../Models/SpeechLM/PureSpeechLM/2023.05.22_TWIST.md).
 By engaging in the pre-trained task of next-token prediction, these speech LMs perform spoken language modeling and can conduct the task of speech continuation.
 
 </td><td>
@@ -502,7 +502,7 @@ By engaging in the pre-trained task of next-token prediction, these speech LMs p
 开创性的工作是语音重合成, 利用这些离散单元结合韵律和说话人编码器将语音编码器为低码率编码.
 这些编码随后可以通过解码器被重新合成为语音信号, 实现低比特率传输.
 此外, 这些离散单元可以被视为伪文本, 作为训练无文本语音语言模型的基础.
-显著的例子包括 [GSLM (2021)](../Models/SpeechLM/2021.02.01_GSLM.md), [pGSLM (2021)](../Models/SpeechLM/2021.09.07_pGSLM.md), [dGSLM (2022)](../Models/SpokenDialogue/2022.03.30_dGSLM.md), 和 [TWIST (2023)](../Models/SpeechLM/2023.05.22_TWIST.md).
+显著的例子包括 [GSLM (2021)](../Models/SpeechLM/S2S/2021.02.01_GSLM.m[pGSLM (2021)](../Models/SpeechLM/S2S/2021.09.07_pGSLM.md).md), [dGSLM (2022)](../Models/SpokenDialogue/2022.03.30_dGSLM.md), 和 [TWIST (2023)](../Models/SpeechLM/PureSpeechLM/2023.05.22_TWIST.md).
 通过采用预训练任务的下一标记预测, 这些语音语言模型可以进行口语语言建模, 并能够进行语音续写任务.
 
 </td></tr>
@@ -520,7 +520,7 @@ With the development of these powerful speech LMs, researchers have begun to exp
 [UnitY (2022)](../Models/_Basis/2022.12.15_UnitY.md) 进一步整合了文本模态以增强语音翻译.
 [SeamlessM4T](../Models/_Basis/2023.08.22_SeamlessM4T.md), [Seamless](../Models/_Basis/2023.12.08_Seamless.md) 整合 [UnitY](../Models/_Basis/2022.12.15_UnitY.md) 框架用于实现表达性和流式语音转文本和语音转语音翻译.
 随着这些强力语音语言模型, 研究人员开始探索在语音语言模型对于各种语音处理任务的提示使用, 包括
-- 提示调参: [An Exploration of Prompt Tuning on Generative Spoken Language Model for Speech Processing Tasks](), [SpeechPrompt v2](../Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md) [SpeechGen](../Models/SpeechLM/2023.06.03_SpeechGen.md)
+- 提示调参: [An Exploration of Prompt Tuning on Generative Spoken Language Model for Speech Processing Tasks](), [SpeechPrompt v2](../Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md) [SpeechGen](../Models/SpeechLM/ST2S/2023.06.03_SpeechGen.md)
 - 上下文学习: [An Exploration of In-Context Learning for Speech Language Model]()
 - 指令调参: [Towards General-Purpose Text-Instruction-Guided Voice Conversion](), [Dynamic-Superb](../Evaluations/2023.09.18_Dynamic-SUPERB.md)
 
