--- a/Surveys/S20250210.md
+++ b/Surveys/S20250210.md
@@ -21,7 +21,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv](PDF/2025.02.10__2502.06490v2__Recent_Advances_in_Discrete_Speech_Tokens_A_Review.pdf)
+  - [ArXiv](PDF/S20250210__Recent_Advances_in_Discrete_Speech_Tokens_A_Review[2502.06490v2].pdf)
   - [Publication] #TODO
 
 </details>
@@ -319,6 +319,22 @@ After quantization, code-vector $\bm c_k$ with $k=q(\bm x)$ is fed to subsequent
 Gumbel VQ does not require additional losses, since code-vectors can be directly learned with gradients and do not need to be pushed towards $\bm x$.
 
 </td><td>
+
+**Gumbel 向量量化**
+
+不使用欧式距离进行量化的另一选择是通过概率.
+**Gumbel VQ**[^056] 使用 Gumbel-Softmax 作为传统 Softmax 的代理分布以实现可微采样.
+给定输入 $\bm x$ 和尺寸为 $V$ 的码本, 变换 $h(\cdot)$ 应用于 $\bm x$ 得到 $V$ 个 logits: $\bm l=h(\bm x)\in \mathbb R^V$.
+在推理时, 量化是通过选择具有最大 logit 的索引实现的, 即 $q(\bm x)=\arg\max_i \left\{\bm l^{(i)}\right\}$.
+在训练时, 样本是从 $\bm l$ 隐含的离散分布中采样得到的, 用于后续神经网络.
+为了实现高效的采样并让梯度通过, 使用了 Gumbel 技巧:
+
+$$
+\begin{aligned}
+    &\bm u\in \mathbb R^V\sim \operatorname{Uniform}(0, 1),\bm v=-\log(-\log(\bm u)) \\
+    &\bm s=\operatorname{Softmax}((\bm l+\bm v)/\tau)
+\end{aligned}
+$$
 
 </td></tr>
 <tr><td>
@@ -1697,11 +1713,11 @@ We hope this review lays a solid foundation for future research in speech techno
 [^001]: [**Survey by Cui et al (2024)**: Recent Advances in Speech Language Models: A Survey.](2024.10.01_Recent_Advances_in_Speech_Language_Models__A_Survey_20P/Main.md) ArXiv:2410.03751.
 [^002]: [**Survey by Ji et al (2024)**: **WavChat**: A Survey of Spoken Dialogue Models.](2024.11.15_WavChat_60P/Main.md) ArXiv:2411.13577.
 [^003]: [**Transformer**: Attention is All You Need.](../Models/_Transformer/2017.06.12_Transformer.md) NeurIPS2017.
-[^004]: [**GSLM**: On Generative Spoken Language Modeling from Raw Audio.](../Models/SpeechLM/S2S/2021.02.01_GSLM.md) ArXiv:2102.01192/TACL2021.
-[^005]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](../Models/SpeechLM/ST2S/2022.09.07_AudioLM.md) TASLP2023.
+[^004]: [**GSLM**: On Generative Spoken Language Modeling from Raw Audio.](../Models/SpeechLM/PureSpeechLM/2021.02.01_GSLM.md) ArXiv:2102.01192/TACL2021.
+[^005]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](../Models/SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md) TASLP2023.
 [^006]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](../Models/SpeechLM/ST2S/2023.01.05_VALL-E.md) ArXiv:2301.02111.
 [^007]: [**VioLA**: Unified Codec Language Models for Speech Recognition, Synthesis, and Translation.](../Models/SpeechLM/ST2ST/2023.05.25_VioLA.md) ArXiv:2305.16107.
-[^008]: [**Survey by Mohamed (2022)**: Self-Supervised Speech Representation Learning: A Review.](2022.05.21_Self-Supervised_Speech_Representation_Learning__A_Review/Main.md) JSTSP2022.
+[^008]: [**Survey by Mohamed (2022)**: Self-Supervised Speech Representation Learning: A Review.](S20220521.md) JSTSP2022.
 [^009]: zhang2024speechtokenizer
 [^010]: [**Moshi/Mimi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../Models/SpeechLM/Interaction/2024.09.17_Moshi.md) ArXiv:2410.00037.
 [^011]: anees2024speech
