--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -805,75 +805,77 @@ Moshi 进一步扩展了架构以并行建模多个语音流, 从而能够从概
 
 ### 4.2·多阶段训练策略
 
-This section primarily discusses the training process of the Spoken Dialogue Model, building upon previous work on spoken dialogue systems.
-Generally, this process consists of four stages: text LLM pre-training, modality adaptation and alignment post-training, followed by supervised fine-tuning, and optionally, preference optimization.
-The primary goal in training most spoken dialogue systems is to preserve the model's original capabilities while integrating the speech modality for voice interaction into the LLM.
-The diagram of multi-stage training can be referred to in Figure ~\ref{fig:archi_img2}.
+本节主要基于之前在口语对话系统方面的工作来讨论口语对话模型的训练过程.
+通常, 该过程包括四个阶段:
+- 文本 LLM 预训练
+- 模态适配和对齐后训练
+- 监督微调
+- 以及可选的偏好优化
 
-> Figure.06: Diagram of Multi-stage Training Steps.
+训练大多数口语对话系统的主要目标是保留模型的原始能力, 同时将语音模态集成到 LLM 中, 以实现语音交互.
 
-#### Text LLM Pre-Training
+多阶段训练的流程图可参考图 06。
 
-The goal is to develop a text-intelligent LLM model capable of handling complex contexts and possessing knowledge reasoning abilities, thus preparing it for integration with speech-intelligent LLMs.
-Most spoken dialogue systems utilize pre-trained large language models as foundational models rather than pre-training with separate text data themselves.
-A series of approaches **SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen], [^SpiRit-LM], **EMOVA**[^EMOVA], [^LLaMA-Omni], [^SyncLLM] use the LLaMA model and its variants as their foundational language model.
-On the other hand, [^LauraGPT], [^Mini-Omni], **Mini-Omni2**[^Mini-Omni2], [^OmniFlatten] employ the Qwen [^Qwen], [^Qwen2] family of large language models as their backbone.
-Meanwhile, **Moshi**[^Moshi] employs an RQ-Transformer for hierarchical autoregressive modeling of speech, utilizing a unique structure that involves pre-training a text-only language model with datasets from the internet (e.g., Wikipedia \footnote{[URL](https://dumps.wikimedia.org/)} and StackExchange \footnote{[URL](https://archive.org/details/stackexchange/)}).
-The collected data was filtered using a comprehensive preprocessing pipeline to ensure quality and relevance, which included deduplication to remove redundant entries, language identification to retain text in the desired language, and quality filtering to exclude low-quality or irrelevant content based on criteria such as coherence and completeness.
-**VITA**[^VITA] utilizes Mixtral 8x7B1 [^111], a representative LLM with a sparse mixture of experts (SMoE) architecture, and performs pure-text instruction tuning for its extended Chinese vocabulary.
+![Images/S20241115_Fig.06.png](Images/S20241115_Fig.06.png)
 
-#### Modality Adaptation and Alignment Post-training
-
-> Figure.07:Alignment Post-training Methods.
-
-This phase explores strategies to adapt text-based large language models (LLMs) for speech modality input, focusing on aligning text and audio modalities effectively.
-The primary goal is to enhance the models' ability to understand and generate speech by bridging the gap between these two modalities.
-Common approaches include multimodal training techniques, leveraging unlabeled speech corpora, and employing multi-task learning frameworks.
-These methods typically involve fine-tuning existing LLMs with speech-related tasks and integrating speech-specific modules, such as speech adaptors and decoders, to facilitate seamless interaction between text and speech modalities.
-Different training tasks for modality adaptation and alignment are shown in Figure ~\ref{fig:archi_img3}.
-Spirit-LM [^SpiRit-LM] continuously pretrains on text LLM checkpoints using interleaved text and speech tokens to improve the model's performance in speech understanding and generation.
-LLaMA-Omni [^LLaMA-Omni] adopts a two-stage training strategy: the first stage jointly trains a speech adaptor and LLM with speech input and text responses, while the second stage uses the same dataset to train a streaming speech decoder independently.
-Consequently, this LLM primarily possesses the capability for speech input understanding, with speech generation handled by a separate decoder module.
-**SpeechGPT**[^SpeechGPT], **Moshi**[^Moshi], and **VITA**[^VITA] utilize unlabeled speech corpora to train models in a next-token prediction task.
-In the first phase, **VITA** focuses on training the audio encoder and connector, while in the second phase, it optimizes both the connector and the LLM model through multimodal training.
-Although capable of processing speech input, it outputs only text.
-Spectron [^Spectron] addresses the alignment issue between text and speech representations by jointly supervising multiple objectives.
-IntrinsicVoice [^IntrinsicVoice] employs a two-stage training approach, constructing multiple cross-modal tasks from a single dataset to enable the model to better learn the semantic consistency between speech and text.
-Mini-Omni [^Mini-Omni], **EMOVA**[^EMOVA], and OmniFlatten [^OmniFlatten] adopt similar methodologies, commencing with supervised multi-task fine-tuning of the text LLM backbone to achieve speech-text modality alignment and develop a multimodal LLM[^112], [^113] using Automatic Speech Recognition (ASR) and Text-to-Speech (TTS) tasks.
-Notably, Mini-Omni divides the training of various modules into three phases: the first phase utilizes data from speech recognition and synthesis to enhance the model’s abilities in these aspects, training only the ASR and TTS adapters.
-The second phase focuses exclusively on enhancing the model’s text capabilities when given speech inputs, updating only the LLM parameters while freezing other modules.
-Through these two training phases, the original language LLM’s capabilities are maximally preserved, while adapting to speech modality input and output, thereby addressing the primary modality alignment tasks.
-
-#### Supervised Fine-tuning or Dialogue Dataset Fine-tuning
-
-During this stage, most models use instruction-following datasets or dialogue data for supervised fine-tuning of the LLM, enhancing natural conversational abilities.
-**SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen] propose a two-stage instruction-tuning process that includes cross-modal instruction fine-tuning and chain-of-modality instruction fine-tuning.
-Ultimately, the model follows the A-T-T-A method to achieve end-to-end speech input and output.
-**EMOVA**[^EMOVA] employs a similar chain-of-modality concept to construct instruction-tuning datasets, empowering it to respond accurately to speech instructions.
-**Moshi**[^Moshi], Mini-Omni [^Mini-Omni], OmniFlatten [^OmniFlatten], and SyncLLM [^SyncLLM] utilize spoken dialogue datasets for fine-tuning, endowing the models with conversational interaction capabilities.
-Remarkably, Moshi constructs a more natural and realistic dialogue dataset that incorporates elements such as noise and overlap, enabling the model to learn authentic multi-stream interactions.
-OmniFlatten fine-tunes the speech-text LLM using interleaved and serialized dialogues across three stages to progressively train the model in acquiring half-duplex and full-duplex communication capabilities.
-Similarly, SyncLLM employs a three-stage training procedure that predominantly uses synthetic spoken dialogue data along with a relatively small amount of real-world spoken dialogue data to develop a full-duplex voice agent.
-
-#### Preference Optimization and Reinforcement Learning
-
-The research on leveraging preference optimization to align a spoken dialogue model with human preferences is virtually absent.
-Recently, [^114], [^115], [^116] adopted preference optimization for Text-to-Speech (TTS) models to align speech synthesis quality with human preferences but not for spoken dialogue models.
-Align-SLM [^Align-SLM] pioneers the integration of Direct Preference Optimization (DPO) [^DPO] in textless Spoken Language Models (SLMs) to enhance semantic understanding.
-It transforms continuous speech into discrete units using a pre-trained Hubert model and K-means clustering.
-LoRA fine-tuning on a Spoken LLM generates multiple speech continuations from prompts.
-Semantic metrics create preference data offline, making DPO training efficient and stable, eliminating the need for an external reward model.
-Coupled with curriculum learning [^117], Align-SLM progressively refines preference data selection, optimizing semantic feedback, and improving SLM performance.
+#### 文本大预言模型预训练
 
 
-### Training Frameworks and Generation Strategies
+这一阶段的目标是开发一个能够处理复杂上下文并具备知识推理能力的文本智能 LLM 模型, 从而为与语音智能 LLM 的集成做好准备.
+
+大多数口语对话系统利用预训练的大语言模型作为基础模型, 而不是自行使用单独的文本数据进行预训练.
+- 一系列方法 (**SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen], [^SpiRit-LM], **EMOVA**[^EMOVA], [^LLaMA-Omni], [^SyncLLM]) 使用 LLaMA 模型及其变体作为其基础语言模型.
+- 另一方面 ([^LauraGPT], [^Mini-Omni], **Mini-Omni2**[^Mini-Omni2], [^OmniFlatten]) 采用 Qwen ([^Qwen], [^Qwen2]) 系列大语言模型作为其骨干.
+- 同时, **Moshi**[^Moshi] 采用 RQ-Transformer 进行语音的分层自回归建模, 利用一种独特的结构, 通过互联网数据集 (例如[维基百科](https://dumps.wikimedia.org/) 和 [StackExchange](https://archive.org/details/stackexchange/)) 预训练纯文本语言模型. 收集的数据通过全面的预处理流水线进行过滤, 以确保质量和相关性, 包括去重以删除冗余条目, 语言识别以保留所需语言的文本, 以及质量过滤以排除根据连贯性和完整性等标准判断为低质量或不相关的内容.
+- **VITA**[^VITA] 利用 **Mixtral 8x7B1** [^Mixtral], 这是一种具有稀疏混合专家 (Sparse Mixture of Experts, SMoE) 架构的代表性 LLM, 并对其扩展的中文词汇进行纯文本指令调优.
+
+#### 模态适配和对齐后训练
+
+这一阶段探索将基于文本的大语言模型适配到语音模态输入的策略, 着重于有效地对齐文本和音频模态.
+主要目标是通过弥合文本和语音模态之间的差距来增强模型理解和生成的能力.
+常用方法包括多模态训练技术, 利用无标签语音数据集并采用多任务学习框架.
+这些方法通常涉及到使用与语音相关的任务微调现有的大语言模型并整合语音特定模块, 例如语音适配器和解码器, 以促进文本和语音模态之间的无缝交互.
+模态适配和对齐的不同训练任务如图 07 所示.
+
+![](Images/S20241115_Fig.07.png)
+
+- Spirit-LM [^SpiRit-LM] 使用交错的文本和语音 Token 在文本 LLM 检查点进行持续预训练, 来提升模型在语音理解和生成的性能.
+- LLaMA-Omni [^LLaMA-Omni] 采用两阶段训练策略: 第一阶段使用语音输入和文本响应联合训练语音适配器和 LLM, 第二阶段使用相同的数据集来单独训练流式语音解码器.
+  因此这一 LLM 主要具备语音输入的理解能力, 而语音生成由单独的解码器模块处理.
+- **SpeechGPT**[^SpeechGPT], **Moshi**[^Moshi], **VITA**[^VITA] 利用无标注的语音语料库通过下一个 Token 预测任务来训练模型: 第一阶段, VITA 专注于训练音频编码器和连接器, 而第二阶段通过多模态训练优化连接器和 LLM 模型. 尽管能够处理语音输入, 但只能输出文本.
+- Spectron [^Spectron] 通过联合监督多个目标来处理文本和语音表示之间的对齐问题.
+- IntrinsicVoice [^IntrinsicVoice] 采用两阶段训练方法, 从单一数据集构建多个跨模态任务来使得模型更好地学习语音和文本之间的语义一致性.
+- Mini-Omni [^Mini-Omni], **EMOVA**[^EMOVA], OmniFlatten [^OmniFlatten] 采用类似的方法, 首先对文本 LLM 骨干进行多任务微调, 以实现语音-文本模态对齐, 并使用自动语音识别和文本转语音任务开发多模态 LLM (**Survey20240517**[^S20240517]; **Survey20240816**[^S20240816]). 值得注意的是, Mini-Omni 将不同模块的训练划分为三个阶段: 第一阶段利用语音识别和合成的数据来增强模型在这些方面的能力, 仅训练 ASR 和 TTS 模块; 第二阶段仅专注于在给定语音输入时增强模型的文本能力, 冻结其他模块仅更新 LLM 参数. 通过这两个训练阶段, 原始语言 LLM 的能力被最大程度的保留, 同时适配到语音模态的输入和输出, 从而解决主要的模态对齐任务.
+
+#### 监督式微调/对话数据集微调
+
+在这一阶段, 大多数模型使用指令跟随数据集或口语数据即进行 LLM 的监督式微调, 增强自然对话能力.
+- **SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen] 提出了一种两阶段的指令微调过程, 包括跨模态指令微调和链式模态指令微调.
+  最后模型遵循 A-T-T-A 方法实现端到端语音输入和输出.
+- **EMOVA**[^EMOVA] 采用类似的链式模态概念构造指令微调数据集, 赋予模型准确响应语音指令.
+- **Moshi**[^Moshi], Mini-Omni [^Mini-Omni], OmniFlatten [^OmniFlatten], SyncLLM [^SyncLLM] 利用口语对话数据集进行微调, 赋予模型对话互动能力.
+  - 值得注意的是, Moshi 构造了一个更自然和真实的对话数据集, 其中包含诸如噪声和重叠等元素, 使得模型能够学习真实的多流交互.
+  - OmniFlatten 利用三阶段训练过程, 首先使用交替和序列化的对话数据进行语音-文本 LLM 的微调, 逐步训练模型以实现半双工和全双工通信能力.
+  - 类似地, SyncLLM 使用三阶段训练过程, 首先使用合成口语对话数据和相对较少的真实口语对话数据进行微调, 开发全双工语音智能体.
+
+#### 偏好优化和强化学习
+
+利用偏好优化来对齐口语对话模型和人类偏好的研究几乎空缺.
+- Seed-TTS[^Seed-TTS]; SpeechAlign[^SpeechAlign]; UNO[^UNO] 采用偏好优化来对齐文本转语音模型的语音合成质量和人类偏好, 但不适用于口语对话模型.
+- Align-SLM [^Align-SLM] 开创性地将**直接偏好优化** [^DPO] 集成到无文本口语语言模型 (SLM) 中, 增强语义理解.
+  它使用预训练的 Hubert 模型和 K-means 聚类将连续语音转换为离散单元.
+  在口语 LLM 上微调 LoRA 来从提示生成多个语音连续.
+  语义度量生成偏好数据离线, 使得 DPO 训练高效稳定, 避免了外部奖励模型.
+  与**课程学习**[^CurriculumLearning] 结合, Align-SLM 逐步优化偏好数据选择, 优化语义反馈, 并提升 SLM 性能.
+
+### 4.3·训练框架和生成策略
 
 Recent advanced methods in spoken dialogue models employ a variety of innovative techniques to achieve more natural speech output and lower latency.
 In this part, we explore various approaches that exemplify these advancements:
 
 - **LLama-Omni.** LLama-Omni [^LLaMA-Omni] adds a streaming speech decoder that operates after the LLM.
 This decoder runs in a non-autoregressive manner, taking the output hidden states from the LLM as input and generating the discrete unit sequence corresponding to the speech response.
-To model the variable-length mapping between input and output, LLama-Omni employs an upsample factor, denoted as $\lambda$, along with Connectionist Temporal Classification (CTC) loss [^118].
+To model the variable-length mapping between input and output, LLama-Omni employs an upsample factor, denoted as $\lambda$, along with **Connectionist Temporal Classification (CTC)** loss [^CTC].
 This ensures that the model can generate speech responses simultaneously with text responses.
 Additionally, a predefined chunk size is set to further enable vocoder streaming synthesis of speech waveforms, facilitating real-time interaction and reducing latency.
 
@@ -956,10 +958,10 @@ For instance, sentence-level alignment might offer a broader contextual understa
 #### Reinforcement Learning (RL) in Spoken Dialogue Models
 
 Reinforcement Learning (RL) has proven to be an effective learning paradigm in text and image processing [^123], [^124], [^125].
-Recent research has shown that Direct Preference Optimization (DPO) [^DPO] can be extended to music and speech generation [^126], [^115].
+Recent research has shown that Direct Preference Optimization (DPO) [^DPO] can be extended to music and speech generation [^126], [^SpeechAlign].
 MusicRL [^126] uses Reinforcement Learning from Human Feedback (RLHF) to improve music generation by fine-tuning a pretrained model for better text adherence and audio quality.
 By collecting extensive human feedback, MusicRL creates a more refined and subjective music generation system.
-Seed-TTS [^114] explores RL methods, comparing external reward models like REINFORCE with simpler methods like DPO.
+Seed-TTS [^Seed-TTS] explores RL methods, comparing external reward models like REINFORCE with simpler methods like DPO.
 The study highlights using REINFORCE to enhance speaker similarity and emotion controllability in the Seed-TTS system.
 Qwen2-Audio [^Qwen2-Audio] uses DPO to align with human preferences by optimizing responses based on human-annotated data.
 This enhances its ability to follow audio instructions accurately and intelligently respond to complex audio inputs, improving its performance in audio-centric tasks.
@@ -1915,14 +1917,14 @@ SimVQ [^259] &
 [^VoxtLM]: maiti2024voxtlm
 [^Mistral7B]: chaplot2023albert
 [^TWIST]: hassid2024textually
-[^111]: jiang2024mixtral
-[^112]: jin2024efficientmllm
-[^113]: li2024surveybenchmarksmultimodallarge
-[^114]: anastassiou2024seed
-[^115]: zhang2024speechalign
-[^116]: chen2024enhancing
-[^117]: bengio2009curriculum
-[^118]: graves2006connectionist
+[^Mixtral]: jiang2024mixtral
+[^S20240517]: Efficient Multimodal Large Language Models: A Survey.
+[^S20240816]: A Survey on Benchmarks of Multimodal Large Language Models.
+[^Seed-TTS]: anastassiou2024seed
+[^SpeechAlign]: zhang2024speechalign
+[^UNO]: chen2024enhancing
+[^CurriculumLearning]: Curriculum Learning.
+[^CTC]: graves2006connectionist
 [^119]: peng2024voicecraft
 [^120]: yang2023uniaudio
 [^121]: yu2023megabyte
