--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -820,7 +820,6 @@ Moshi 进一步扩展了架构以并行建模多个语音流, 从而能够从概
 
 #### 文本大预言模型预训练
 
-
 这一阶段的目标是开发一个能够处理复杂上下文并具备知识推理能力的文本智能 LLM 模型, 从而为与语音智能 LLM 的集成做好准备.
 
 大多数口语对话系统利用预训练的大语言模型作为基础模型, 而不是自行使用单独的文本数据进行预训练.
@@ -870,56 +869,60 @@ Moshi 进一步扩展了架构以并行建模多个语音流, 从而能够从概
 
 ### 4.3·训练框架和生成策略
 
-Recent advanced methods in spoken dialogue models employ a variety of innovative techniques to achieve more natural speech output and lower latency.
-In this part, we explore various approaches that exemplify these advancements:
+在口语对话模型中的近期先进方法采用了各种创新的技术来实现更自然的语音输出和更低的延迟.
+在这一部分, 我们探索了这些先进的各种方法:
 
-- **LLama-Omni.** LLama-Omni [^LLaMA-Omni] adds a streaming speech decoder that operates after the LLM.
-This decoder runs in a non-autoregressive manner, taking the output hidden states from the LLM as input and generating the discrete unit sequence corresponding to the speech response.
-To model the variable-length mapping between input and output, LLama-Omni employs an upsample factor, denoted as $\lambda$, along with **Connectionist Temporal Classification (CTC)** loss [^CTC].
-This ensures that the model can generate speech responses simultaneously with text responses.
-Additionally, a predefined chunk size is set to further enable vocoder streaming synthesis of speech waveforms, facilitating real-time interaction and reducing latency.
+- LLaMA-Omni[^LLaMA-Omni] 在 LLM 后添加了一个流式语音解码器.
+该解码器以非自回归方式运行, 接受 LLM 的输出隐藏状态作为输入, 生成对应语音响应的离散单元序列.
+为了建模输入和输出之间的可变长度映射, LLaMA-Omni 采用上采样因子, 记为 $\lambda$, 并采用 **Connectionist Temporal Classification (CTC)** [^CTC].
+这确保模型能够同时生成文本响应和语音响应.
+此外, 设置了预定义的块大小以进一步启用声码器流式合成语音波形, 促进实时互动并降低延迟.
 
-- **Mini-Omni.** Mini-Omni [^Mini-Omni] selects SNAC [^SNAC], a music-grade encoder, to discretize one second of audio into hundreds of tokens, which significantly increases the burden on the LLM for modeling speech tokens.
-Delay Pattern language model decoding strategies are often applied in modeling multiple parallel streams of acoustic tokens in speech tasks like MusicGen [^MusicGen], VoiceCraft [^119], and Parler-TTS [^ParlerTTS].
-Compared with traditional sequential step decoding, this strategy can effectively reduce the time steps required for LLM decoding and generating speech tokens.
-Inspired by this, Mini-Omni innovatively applies text-instructed delayed parallel generation to address the issue of long SNAC codebook sequences, simultaneously producing audio and text tokens.
-This effectively leverages and preserves the original capabilities of the language model.
-Moreover, Mini-Omni proposes a Batch Parallel Decoding method.
-Specifically, it generates two samples in parallel for a single input: the first predicts text tokens, and the second predicts both text and speech tokens simultaneously.
-The text output from the first sample is embedded into the corresponding positions of the second sample, while the second sample's text output is discarded.
-This further enhances the model’s reasoning capabilities during dialogue, maximizing the transfer of its text-based abilities.
+- Mini-Omni [^Mini-Omni] 选择 SNAC [^SNAC], 一个音乐级编码器, 将一秒钟的音频划分为数百个 Token, 这显著增加了 LLM 建模语音 Token 的负担.
+延迟模式语言模型解码策略通常用于建模语音任务中的多个并行流的音频 Token, 如 MusicGen [^MusicGen], VoiceCraft [^VoiceCraft], 和 Parler-TTS [^ParlerTTS].
+与传统的顺序步进解码相比, 这种策略可以有效地减少 LLM 解码和生成语音 Token 需要的时间步数.
+受此启发, Mini-Omni 创新地采用文本指导的延迟并行生成, 解决了 SNAC 码本序列过长的问题, 同时生成音频和文本 Token.
+这有效地利用并保留了语言模型的原始能力.
+此外, Mini-Omni 提出了批次并行解码方法.
+具体来说, 它为单个输入并行生成两个样本: 第一个预测文本 Token, 第二个同时预测文本和语音 Token.
+第一个样本的文本输出嵌入到第二个样本的相应位置, 而第二个样本的文本输出被丢弃.
+这进一步增强了模型在对话中的推理能力, 最大限度地迁移其基于文本的能力.
 
-- **IntrinsicVoice.** IntrinsicVoice [^IntrinsicVoice] introduces a speech encoder and a streaming vocoder for the tokenization and detokenization of speech, and a GroupFormer for modeling speech and text sequences.
-This architecture integrates a large language model (LLM) with a GroupModel.
-Specifically, it uses a pre-trained HuBERT encoder [^HuBERT] and its corresponding KMeans quantizer [^TWIST] to process speech inputs into discrete units.
-These units are organized into a grouped token sequence through a group partition operation.
-The grouped tokens are then passed through an embedding layer and adaptor module to map these embeddings into the LLM's embedding space.
-The context embeddings output by the LLM are processed through a linear layer and concatenated with a specified number of learnable queries.
-This input is fed into a smaller non-autoregressive transformer encoder model, dubbed the "GroupModel," to predict a group of speech tokens in one step.
-The introduction of GroupFormer effectively improves the model's ability to handle sequences within a group, mitigates the modality gap between speech and text, accelerates inference speed, and alleviates issues associated with long-sequence modeling.
+- IntrinsicVoice [^IntrinsicVoice] 提出了语音编码器和流式解码器, 用于对语音进行分词和反分词, 以及用于建模语音和文本序列的 GroupFormer.
+该架构将大语言模型 (LLM) 与 GroupModel 集成在一起.
+具体来说, 它使用预训练的 HuBERT[^HuBERT] 编码器和其对应的 K-Means 量化器 (TWIST[^TWIST]) 对语音输入进行离散化.
+这些离散单元组织成了一个分组 Token 序列, 这通过分组划分操作完成.
+然后, 分组 Token 被输入到嵌入层和适配器模块中, 用于将这些嵌入映射到 LLM 的嵌入空间.
+LLM 的上下文嵌入输出通过线性层处理, 并与可学习的查询连接在一起.
+然后输入到较小的非自回归 Transformer 编码器模型, 称为 "GroupModel", 以一步预测一组语音 Token.
+GroupFormer 的引入有效地提高了模型处理组内序列的能力, 减轻了语音和文本模态之间的模态差距, 加速了推理速度, 并减轻了长序列建模相关的问题.
 
-- **Moshi.** **Moshi**[^Moshi] introduces a mini codec model with 8 codebooks at a frame rate of 12.5 Hz for speech representation, where one second corresponds to 100 speech tokens.
-It adopts an RQ-Transformer consisting of a Temporal Transformer and a smaller Depth Transformer as the backbone network for the LLM, hierarchically modeling multi-codebook audio tokens.
-Similar architectures have appeared in prior research, such as UniAudio [^120] and Megabyte [^121].
-The Depth Transformer models sub-sequence tokens conditioned on temporal context predicted by the Temporal Transformer.
-Given the smaller size of the Depth Transformer, sub-sequence generation can almost be viewed as parallel generation.
-This allows the model to scale to longer sequences by extending the temporal modeling capacity of the Temporal Transformer or to achieve greater depth by enhancing the hierarchical modeling capabilities of the Depth Transformer, rather than modeling the flattened sequence with a single model.
+- **Moshi**[^Moshi] 提出了一个具有 8 个码本帧率为 12.5 Hz 的小型码本模型用于语音表示, 一秒语音对应于 100 个语音 Token.
+它采用了由时序 Transformer 和更小的深度 Transformer 组成的 RQ-Transformer 作为 LLM 的骨干网络, 层次化建模多码本音频 Token.
+与以前的研究相似, 如 UniAudio [^UniAudio] 和 MegaByte [^MegaByte], 出现了类似的架构.
+深度 Transformer 以时序 Transformer 预测的时序上下文为条件建模子序列 Token.
+给定更小的深度 Transformer, 子序列生成几乎可以被视为并行生成.
+这使得模型通过增加时序 Transformer 的时序建模能力扩展到更长的序列, 也能通过增强深度 Transformer 的层次化建模能力来实现更深的深度, 而不是用单个模型来建模扁平化的序列.
 
-- **SyncLLM.** SyncLLM [^SyncLLM] employs an auto-regressive transformer decoder for full-duplex dialogue, integrating time synchronization to align speech units with the real-world clock.
-It predicts interleaved speech tokens for both dialogue partners, maintaining timing with speaker tags.
-The model is trained on deduplicated HuBERT token sequences to enhance semantic fidelity while managing latency by anticipating user responses.
-Interpolation reconstructs token sequences to fit expected structures, facilitating seamless speech synthesis.
+- SyncLLM [^SyncLLM] 采用自回归 Transformer 解码器进行全双工对话, 集成了时间同步功能, 以将语音单元与现实世界时钟对齐.
+它为对话双方预测交错的语音 Token, 并通过说话者标签保持时间同步.
+该模型在去重后的 HuBERT Token 序列上进行训练以增强语义保真度, 同时通过预测用户响应来管理延迟.
+插值重建 Token 序列以适应预期的结构, 从而实现无缝的语音合成.
 
-**Text-guided generation.** Some end-to-end methods like **SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen], [^Spectron], **EMOVA**[^EMOVA] use chain-of-thought reasoning, which allows guiding speech generation with the output of an underlying text LLM.
-However, this is fundamentally incompatible with live interactions, as the model needs to produce an entire answer as text before it starts speaking.
-Later methods [^LLaMA-Omni], [^Mini-Omni], **Moshi**[^Moshi] can accept user speech input and simultaneously output speech and text, ensuring high-quality responses while significantly reducing latency.
-Lama-Omni [^LLaMA-Omni] utilizes a streaming decoder to generate text and speech tokens in parallel.
-Mini-Omni [^Mini-Omni] is restructured to transfer language reasoning abilities to streaming audio output through a text-audio parallel decoding approach.
-**Moshi**[^Moshi] details a novel feature, the Inner Monologue, which consists of joint modeling of the textual and speech modalities on the system side to improve the quality of interactions.
+#### 文本引导生成
 
-**W/o text-guided generation.** Other methods achieve speech-to-speech generation without relying on text stream generation.
-IntrinsicVoice [^IntrinsicVoice] introduces a novel GroupModel that predicts a group of speech tokens in one step based on global context embeddings.
-SyncLLM [^SyncLLM] predicts interleaved chunks of token sequences at each time step, allowing the model to handle all conversational cues such as backchannels, overlaps, interruptions, etc.
+- 一些端到端方法, 如 (**SpeechGPT**[^SpeechGPT], [^SpeechGPT-Gen], [^Spectron], **EMOVA**[^EMOVA]) 采用思维链推理, 允许使用底层的文本 LLM 的输出引导语音生成.
+然而, 这种方式和实时互动在根本上是不兼容的, 因为模型需要生成整个答案的文本, 然后才能开始说话.
+- 后续方法 ([^LLaMA-Omni], [^Mini-Omni], **Moshi**[^Moshi]) 可以接受用户语音输入, 并同时输出语音和文本, 确保高质量的响应, 并显著降低延迟.
+- LLaMA-Omni[^LLaMA-Omni] 采用流式解码器并行生成文本和语音 Token.
+- Mini-Omni [^Mini-Omni] 通过文本-语音并行解码方法, 将语言推理能力迁移到流式音频输出.
+- **Moshi**[^Moshi] 详细介绍了一种新特征, 即 Inner Monologue, 它由系统侧的联合建模文本和语音模态, 改善交互质量.
+
+#### 无文本引导生成
+
+其他方法实现了无需依赖文本流生成的语音到语音生成.
+- IntrinsicVoice [^IntrinsicVoice] 提出了一种全新的 GroupModel, 它以全局上下文嵌入为条件一步预测一组语音 Token.
+- SyncLLM [^SyncLLM] 在每个时间步预测交错的 Token 序列块, 允许模型处理所有会话提示, 如背景通道, 重叠, 中断等.
 
 ### Discussions about Training Paradigm in Spoken Dialogue Models
 
@@ -1925,9 +1928,9 @@ SimVQ [^259] &
 [^UNO]: chen2024enhancing
 [^CurriculumLearning]: Curriculum Learning.
 [^CTC]: graves2006connectionist
-[^119]: peng2024voicecraft
-[^120]: yang2023uniaudio
-[^121]: yu2023megabyte
+[^VoiceCraft]: peng2024voicecraft
+[^UniAudio]: yang2023uniaudio
+[^MegaByte]: yu2023megabyte
 [^122]: kim2021conditional
 [^123]: schulman2017proximal
 [^124]: sutton1999policy
