--- a/Surveys/S20241115.md
+++ b/Surveys/S20241115.md
@@ -924,53 +924,56 @@ GroupFormer 的引入有效地提高了模型处理组内序列的能力, 减轻
 - IntrinsicVoice [^IntrinsicVoice] 提出了一种全新的 GroupModel, 它以全局上下文嵌入为条件一步预测一组语音 Token.
 - SyncLLM [^SyncLLM] 在每个时间步预测交错的 Token 序列块, 允许模型处理所有会话提示, 如背景通道, 重叠, 中断等.
 
-### Discussions about Training Paradigm in Spoken Dialogue Models
+### 4.4·相关讨论
 
-#### Text and Speech Modality Alignment
+#### 文本和语音模态对齐
 
-In spoken dialogue systems, the alignment between speech and text modalities is a crucial stage.
-To preserve the textual intelligence of large language models (LLMs) as much as possible, nearly all current methodologies **SpeechGPT**[^SpeechGPT], [^PSLM], [^LLaMA-Omni], [^Mini-Omni], **Mini-Omni2**[^Mini-Omni2], **Moshi**[^Moshi], [^OmniFlatten] incorporate a post-training phase utilizing speech-text paired data when developing spoken dialogue models.
-This may involve either expanding the vocabulary to treat speech tokens as an extension of the original vocabulary or using speech adaptors to map speech embeddings to the original text latent space of the LLM, and designing multi-task training objectives to achieve alignment between text and speech modalities.
-For example, data from speech recognition and speech synthesis can be used to train the model's speech recognition and synthesis capabilities.
-Although this is an effective strategy, its implementation can still lead to a certain degree of catastrophic forgetting in LLMs due to the large volume of pre-trained text corpora and the imbalance with paired speech-text data, which can harm the model's text-based capabilities.
-Therefore, precise parameter design and customized optimization strategies are needed to mitigate this issue as much as possible, as demonstrated by approaches like **Moshi**[^Moshi].
+在口语对话系统中, 语音和文本模态之间的对齐是至关重要的阶段.
 
-This raises a consideration: during the training phase of spoken dialogue models, is it feasible to directly utilize speech data for adaptation to text-based LLMs, thereby eliminating the necessity for speech-text paired data? This is because unlabeled speech data is abundant and easily accessible, making it convenient and beneficial for training the speech intelligence of LLMs.
-This approach would require us to obtain a pre-aligned speech representation with the text modality.
-Perhaps we can consider further exploration and experimentation in the speech tokenizer component, such as directly mapping the semantic discrete units of speech onto the text token space to achieve enforced alignment.
+为了尽可能保留大语言模型的文本智能, 几乎所有现有方法 (**SpeechGPT**[^SpeechGPT], [^PSLM], [^LLaMA-Omni], [^Mini-Omni], **Mini-Omni2**[^Mini-Omni2], **Moshi**[^Moshi], [^OmniFlatten]) 在开发口语对话模型时, 都整合了利用语音-文本配对数据的后训练阶段.
 
-#### Different Temporal Alignment Methods in Spoken Dialogue Models
+这可能涉及扩展词表以将语音 Token 视为原始词表的扩展, 或者使用语音适配器将语音嵌入映射到大语言模型的原始文本潜在空间, 并设计多任务训练目标以实现文本和语音模态之间的对齐.
+例如, 来自语音识别和语音合成的数据可以用于训练模型的语音识别和合成能力.
+尽管这是一种有效的策略, 但其实现仍然可能导致大语言模型某种程度的灾难性遗忘, 因为大量的预训练文本语料库和语音-文本配对数据之间的不平衡, 这会损害模型的基于文本的能力.
+因此, 尽可能缓解这一问题的精确的参数设计和定制优化策略是必要的, 如 **Moshi**[^Moshi] 所示.
 
-In speech and text modalities, there is often a significant mismatch in sequence lengths.
-Even when some speech tokenizers [^WavTokenizer], [^Single-Codec] employ extreme sequence compression methods, a length gap remains between the two.
-Temporal alignment information between speech and text has been explored in tasks like Automatic Speech Recognition (ASR) and Text-to-Speech (TTS) as demonstrated by models such as Whisper [^Whisper], FastSpeech [^FastSpeech2], and VITS [^122].
-Recently, some spoken dialogue systems have utilized temporal alignment information to enhance model performance, yielding promising results.
-For instance, Spirit-LM [^SpiRit-LM] uses interleaving text and speech tokens for continual pre-training on the LLaMA base model, significantly boosting the model’s performance in speech understanding and generation.
-Experimental visualizations demonstrate that the similarity between text and speech features is notably higher in models trained with interleaved token sequences compared to those trained without this approach.
-This indicates that providing the model with explicit fine-grained temporal alignment information can effectively enhance modality alignment and improve the performance of LLMs.
+这引起了一种考虑: 在口语对话模型的训练阶段, 是否可以直接使用语音数据对基于文本的大语言模型进行适配, 从而消除语音-文本对数据的需要?
+这是因为无标签语音数据是丰富的, 易于获得, 因此可以方便地训练大语言模型的语音智能.
+这种方法要求我们获得与文本模态预先对齐的语音表示.
+也许我们可以考虑进一步探索和实验语音分词器组件, 例如直接将语音的语义离散单元映射到文本 Token 空间, 以实现强制对齐.
 
-Mini-Omni [^Mini-Omni] achieves parallel generation of text and speech by padding text tokens to match the length of speech tokens, allowing the LLM to implicitly learn the alignment information between speech and text tokens.
-This can be viewed as a form of sentence-level temporal alignment information, a method also utilized in recent speech synthesis work [^F5-TTS].
-**Moshi**[^Moshi], on the other hand, uses word-level speech-text temporal alignment information and special marker tokens to achieve similar parallel generation capabilities.
-The difference lies in that Mini-Omni fully allows the LLM to implicitly learn the alignment, whereas Moshi provides word-level alignment priors first, and then lets the model learn finer-grained alignments.
+#### 不同时序对齐方法
 
-Exploring the impact of introducing different levels of temporal alignment priors on the training effectiveness of spoken dialogue models, such as sentence-level, word-level, or phoneme-level, is an intriguing area of research.
-Understanding how these various alignment strategies affect model performance can guide the development of more efficient and accurate systems.
-For instance, sentence-level alignment might offer a broader contextual understanding, while word-level or phoneme-level alignments could provide more detailed synchronization between speech and text, potentially leading to improvements in nuanced tasks like speech synthesis and understanding.
+在语音和文本模态中, 序列长度通常存在显著的不匹配.
+即使某些语音分词器 ([^WavTokenizer], [^Single-Codec]) 采用极端的序列压缩方法, 两者之间的长度差距也仍然存在.
 
-#### Reinforcement Learning (RL) in Spoken Dialogue Models
+在自动语音识别 (ASR) 和文本转语音 (TTS) 等任务中, 语音和文本之间的时序对齐信息已被探索, 例如 Whisper [^Whisper], FastSpeech [^FastSpeech2], and VITS [^VITS].
 
-Reinforcement Learning (RL) has proven to be an effective learning paradigm in text and image processing [^123], [^124], [^125].
-Recent research has shown that Direct Preference Optimization (DPO) [^DPO] can be extended to music and speech generation [^126], [^SpeechAlign].
-MusicRL [^126] uses Reinforcement Learning from Human Feedback (RLHF) to improve music generation by fine-tuning a pretrained model for better text adherence and audio quality.
-By collecting extensive human feedback, MusicRL creates a more refined and subjective music generation system.
-Seed-TTS [^Seed-TTS] explores RL methods, comparing external reward models like REINFORCE with simpler methods like DPO.
-The study highlights using REINFORCE to enhance speaker similarity and emotion controllability in the Seed-TTS system.
-Qwen2-Audio [^Qwen2-Audio] uses DPO to align with human preferences by optimizing responses based on human-annotated data.
-This enhances its ability to follow audio instructions accurately and intelligently respond to complex audio inputs, improving its performance in audio-centric tasks.
-However, in the dialogue system field, reinforcement learning techniques based on human feedback [^127] are rarely applied.
-Considering the diversity of inputs and outputs in large language models, exploring the incorporation of reinforcement learning strategies such as Proximal Policy Optimization (PPO) [^123] can be beneficial.
-Additionally, considering the performance metrics for evaluating spoken dialogue systems, designing targeted reinforcement learning strategies and feedback functions to enhance different objectives is also a direction worth exploring.
+近期, 一些口语对话系统利用时序对齐信息来增强模型性能, 取得了有前景的结果.
+- Spirit-LM [^SpiRit-LM] 使用交错的文本和语音 Token 对 LLaMA-Base 模型进行持续预训练, 显著提升了模型在语音理解和生成中的性能.
+  实验可视化表明, 在训练时使用交错 Token 序列的模型相比不使用该方法的模型, 语音特征与文本特征之间的相似性明显更高.
+  这表明, 提供给模型显式的细粒度时序对齐信息可以有效地增强模态对齐和提升语言模型的性能.
+- Mini-Omni [^Mini-Omni] 通过填充文本 Token 以匹配语音 Token 的长度, 实现了文本和语音 Token 之间的隐式学习对齐信息.
+  这可以视为一种句子级时序对齐信息, 也是最近的语音合成工作 (**F5-TTS**[^F5-TTS]) 中使用的一种方法.
+- **Moshi**[^Moshi] 则使用词级语音-文本时序对齐信息和特殊标记 Token, 实现了类似的并行生成能力.
+  两者的不同之处在于, Mini-Omni 完全允许大语言模型隐式学习对齐信息, 而 Moshi 首先提供词级语音-文本对齐信息, 然后让模型学习更细粒度的对齐信息.
+
+探索不同时序对齐先验对口语对话模型的训练效果的影响, 如句子级, 词级, 或音素级, 是一项有趣的研究领域.
+理解这些不同的对齐策略对模型性能的影响, 可以指导开发更高效和准确的系统.
+例如, 句子级别对齐可能提供更广泛的上下文理解, 而词级别对齐则可以更好地捕捉到语音和文本之间更详细的同步关系, 潜在地提升语音合成和理解等精细任务的性能.
+
+#### 强化学习
+
+强化学习 (Reinforcement Learning, RL) 在文本和图像处理领域已经证明是一种有效的学习范式 ([^PPO], [^PolicyGradient], [^Diffusion-DPO]).
+近期研究表明, **Direct Preference Optimization (DPO)**[^DPO] 可以被扩展到音乐和语音生成 ([^MusicRL], [^SpeechAlign]) 使用来自人类反馈的强化学习 (RLHF) 来改善音乐生成, 通过微调预训练模型来提高文本一致性和音频质量.
+  通过收集广泛的人类反馈, MusicRL 创造出一个更细致和主观的音乐生成系统.
+- Seed-TTS [^Seed-TTS] 探索了 RL 方法, 比较了外部奖励模型 (REINFORCE) 和简单方法 (DPO) 的效果.
+  研究发现, 使用 REINFORCE 增强说话者相似性和情感控制能力可以提升 Seed-TTS 系统的性能.
+- Qwen2-Audio [^Qwen2-Audio] 使用 DPO 来与人类偏好相匹配, 通过优化响应基于人类标注的数据, 增强其在以音频为中心的任务中的性能.
+
+然而, 在对话系统领域, 基于人类反馈的强化学习技术 (**Survey20231109**[^S20231109]) 很少被应用.
+考虑到大型语言模型的输入和输出的多样性, 探索将强化学习策略 (如 **Proximal Policy Optimization (PPO)**[^PPO]) 纳入其中可以提供益处.
+此外, 考虑到对话系统的性能评估指标, 设计目标导向的强化学习策略和反馈函数来增强不同目标也是值得探索的方向.
 
 ## Streaming, Duplex, and Interaction
 
@@ -1931,12 +1934,12 @@ SimVQ [^259] &
 [^VoiceCraft]: peng2024voicecraft
 [^UniAudio]: yang2023uniaudio
 [^MegaByte]: yu2023megabyte
-[^122]: kim2021conditional
-[^123]: schulman2017proximal
-[^124]: sutton1999policy
-[^125]: wallace2024diffusion
-[^126]: cideron2024musicrl
-[^127]: huang2023survey
+[^VITS]: kim2021conditional
+[^PPO]: schulman2017proximal
+[^PolicyGradient]: sutton1999policy
+[^Diffusion-DPO]: wallace2024diffusion
+[^MusicRL]: cideron2024musicrl
+[^S20231109]: A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions.
 [^128]: bai2018empirical
 [^129]: wu2023audiodec
 [^130]: wang2024full
